--- a/src/Layout/Navbar/Navbar.module.css
+++ b/src/Layout/Navbar/Navbar.module.css
@@ -1,24 +1,26 @@
 header {
-  background-color: #e10600;
+  background-color: #ea0800;
   position: fixed;
   top: 0;
   left: 0;
   right: 0;
   height: 4rem;
   display: flex;
+  justify-content: space-between;
   align-items: center;
-  box-shadow: 0 0 25px 0 rgb(0, 0, 0);
-}
-
-header * {
-  display: inline;
+  box-shadow: 0 0 1rem 0 rgb(0, 0, 0);
 }
 
 header li {
+  display: inline;
   margin: 1rem;
 }
 
 header li a {
   color: #fff;
   text-decoration: none;
+}
+
+.searchbox {
+  padding: 0.5rem 1rem;
 }
