--- a/src/Layout/Slider/SliderImage.module.css
+++ b/src/Layout/Slider/SliderImage.module.css
@@ -1,7 +1,17 @@
-.image-container {
-    /* width: 100%;
+.slide {
+    width: 100%;
     height: 100%;
     position: absolute;
-    opacity: 1; */
-    /* transition: opacity ease-in-out 0.4s; */
+    opacity: 0;
+    transition: opacity ease-in-out 0.4s;
+}
+
+.slide img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+}
+
+.active-anim {
+    opacity: 1;
 }
