Added upcomingMovies screen, latestMovies, events, book now button, additional styling, route to a specific movie id

--- a/src/Layout/Navbar/Navbar.module.css
+++ b/src/Layout/Navbar/Navbar.module.css
@@ -21,6 +21,14 @@ header li a {
   text-decoration: none;
 }
 
+header li a:hover {
+  color: rgb(255, 208, 208);
+}
+
 .searchbox {
   padding: 0.5rem 1rem;
+}
+
+.active {
+  color: rgb(83, 49, 49);
 }
