--- a/src/Layout/Strip/StripItem.module.css
+++ b/src/Layout/Strip/StripItem.module.css
@@ -1,11 +1,36 @@
 .strip-item {
+  display: flex;
+  flex-direction: column;
   width: auto;
-  height: 100%;
+  height: auto;
   box-shadow: 10px 10px 15px 0px rgba(0, 0, 0, 0.5);
 }
 
 .strip-item img {
-  width: 100%;
-  height: 100%;
+  height: auto;
+  width: 200px;
   object-fit: contain;
+}
+
+.strip-item button {
+  border: 0;
+  outline: 0;
+  color: #fff;
+  background-color: #ea0800;
+  line-height: 20px;
+  font-size: 1rem;
+  font-weight: 400;
+  padding: 0.5rem 1rem;
+  min-height: 1.5rem;
+  border: 1px solid rgba(27, 31, 35, 0.15);
+  cursor: pointer;
+}
+
+.strip-item button:hover {
+  background-color: #d31009;
+}
+
+.strip-item button:active {
+  background-color: #b20701;
+  box-shadow: rgba(199, 10, 4, 0.2) 0 1px 0 inset;
 }
