--- a/src/Layout/Navbar/Navbar.module.css
+++ b/src/Layout/Navbar/Navbar.module.css
@@ -9,6 +9,7 @@ header {
   justify-content: space-between;
   align-items: center;
   box-shadow: 0 0 1rem 0 rgb(0, 0, 0);
+  z-index: 2;
 }
 
 header li {
