--- a/src/Layout/ViewContainer/ViewContainer.module.css
+++ b/src/Layout/ViewContainer/ViewContainer.module.css
@@ -7,6 +7,7 @@
 }
 
 .title {
+  color: #ea0800;
   font-weight: 600;
   font-size: 2.5rem;
   text-align: center;
@@ -19,6 +20,10 @@
 
 .container-details > div img {
   margin: 1rem;
+}
+
+.shadow {
+  box-shadow: 0.3rem 0.2rem 0.5rem 0 rgb(0, 0, 0, 0.6);
 }
 
 .sub-text {
