--- a/src/Layout/ViewContainer/ViewContainer.module.css
+++ b/src/Layout/ViewContainer/ViewContainer.module.css
@@ -1,11 +1,3 @@
-.container-details {
-  display: flex;
-  flex-direction: column;
-  margin: auto;
-  width: 80%;
-  align-items: left;
-}
-
 .title {
   color: #ea0800;
   font-weight: 600;
@@ -14,11 +6,11 @@
   margin: 1rem;
 }
 
-.container-details > div {
+.sub-container {
   display: flex;
 }
 
-.container-details > div img {
+.sub-container img {
   margin: 1rem;
 }
 
